# fern

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
public/: index.html
scr/: 235.0e22045fac13dda8b736.js  235.ee1bfa359e1d56b4e7d9.js  24.0f4e95643b794378a98d.js  24.7ed08514e773abed82a2.js  332.601e98b2529c25fcabd4.js  431.648dee36f20eb827bc5c.js  793.02c55baf8bf9b89dc625.js  793.24877378d8d05bc03bf4.js  793.d519b56234a2e60f1e21.js  826.273b1ea772fcca57e8c9.js  826.3b8ed31669d3cc8de42f.js  826.99f5bea331db26f034eb.js  826.eea3df32a3c88065aa49.js  872.4f294b37bc0e7dbdecc9.js  app.2b256d382108f7c9bba3.js  app.3a4d381719d5da1a4b22.js  app.65844f826104402a87f5.js  app.6dcd6ac67ead63b5ee0b.js  app.6ffe7d6fd95b7c2262bd.js  app.a67f7ca55eda84513723.js  app.bae94a6a5e1e84fa084e.js  app.d468b06d38d7d7b5ae99.js  app.f812850304db76b9e096.js  app.fe64b9e2d3d579bf82c2.js
src/: index.css  index.ts  index.tsx  inputs.ts  state.ts  types.ts
src/app/: index.tsx  page.tsx
src/app/barnsley/edit/: page.module.css  page.tsx
src/app/barnsley/view/[params]/: page.module.css  page.tsx
src/app/view/: page.module.css  page.tsx
src/components/AffineTransfo/: AffineTransfo.tsx  index.ts
src/components/App/: App.module.css  App.tsx
src/components/BarnsleyBoundsEditor/: BarnsleyBoundsEditor.tsx  index.ts
src/components/Input/: Input.module.css  Input.tsx
src/data/: data.ts
src/painter/: barnsley.ts
src/rust/: fern.rs
src/utils/: goto.ts  inputs.ts  painter.ts
